Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12112

QGraphicsItem::focusItem() mistakenly reporting a value

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.7.0
    • 4.6.0, 4.7.0
    • Widgets: GraphicsView
    • None
    • b5b011a181bd187dcef5ee8f46a3ac2c5dc2e09c

      The attached diff modifies one of the auto tests to show this issue, which looks to occur when focus passes from one item to another and the two items don't share a common ancestor (the focusItem() is not properly cleared for the item losing focus). The attached diff also has a patch that appears to fix the issue.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ylopes Yoann Lopes
            brasser Michael Brasser (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes