Fixes QGraphicsItem::focusItem() returning incorrect value.

When setting focus on an item, subfocus chain was previously updated
only for items with a common ancestor. We now make sure that this chain
is updated also for the previously focused item (possibly not sharing
any common ancestor with the newly focused item).

Autotest included.

Task-number: QTBUG-12112
Reviewed-by: Alexis Ménard <alexis.menard@nokia.com>
(cherry picked from commit b5b011a181bd187dcef5ee8f46a3ac2c5dc2e09c)